--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.7.2",
-    "angular-route": "^1.7.2",
+    "angular-route": "^1.7.2"
   },
   "devDependencies": {},
   "scripts": {
